<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".ActivityMain">
    <item android:id="@+id/action_apps_system"
        android:title="@string/activity_main_menu_apps_system"
        android:orderInCategory="100"  />
    <item android:id="@+id/action_apps_toggle"
        android:title="@string/activity_main_menu_apps_toggle"
        android:orderInCategory="100"  />
    <item android:id="@+id/action_subnet"
        android:title="@string/activity_main_menu_subnet"
        android:orderInCategory="100" />
    <item android:id="@+id/action_apps_sort"
        android:title="@string/activity_main_menu_apps_sort"
        android:orderInCategory="100"  />
    <item android:id="@+id/action_boot"
        android:title="@string/activity_main_menu_boot"
        android:orderInCategory="100"
        android:checkable="true"/>
    <item android:id="@+id/action_always"
        android:title="@string/activity_main_menu_always"
        android:orderInCategory="100"  />
    <item android:id="@+id/action_refresh"
        android:title="@string/activity_main_menu_refresh" />
    <item android:id="@+id/action_logs"
        android:title="@string/activity_main_menu_logs"
        android:orderInCategory="100" />
    <item android:id="@+id/action_stats"
        android:title="@string/activity_main_menu_stats"
        android:orderInCategory="100" />
    <item android:id="@+id/action_help"
        android:title="@string/activity_main_menu_help"
        android:orderInCategory="100" />
    <item android:id="@+id/action_donate"
        android:title="@string/activity_main_menu_donate"
        android:orderInCategory="100" />
</menu>
