<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ActivityMain"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:orientation="horizontal">

        <TextView android:id="@+id/activity_main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Heading"
            android:gravity="right"
            android:textStyle="bold"  />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="0dp"
                android:layout_gravity="bottom|right">
                >

                <ImageView
                    android:id="@+id/activity_main_firewall_icon"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/vpn_connected2"
                    android:layout_gravity="bottom|right" />

                <ImageView
                    android:id="@+id/activity_main_filter_icon"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginRight="4dp"
                    android:src="@drawable/ic_menu_search2"
                    android:layout_gravity="bottom|right" />

                <ImageView
                    android:id="@+id/activity_main_menu_icon"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_menu_view1"
                    android:layout_gravity="bottom|right" />

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/activity_main_firewall_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="0dp"
        android:singleLine="true"
        android:maxLines="1"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FF0000"
            android:text="@string/firewall_start_part1"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:visibility="visible"
            android:gravity="center_horizontal">
        </TextView>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/vpn_connected2"
            android:layout_gravity="bottom"
            android:tint="#ff0000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FF0000"
            android:text="@string/firewall_start_part2"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:visibility="visible"
            android:gravity="center_horizontal">
        </TextView>

    </LinearLayout>
    </LinearLayout>

    <EditText android:id="@+id/activity_main_filter_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:ems="10"
        android:hint="@string/filter_text"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <requestFocus />
    </EditText>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:listSelector="@android:color/transparent"
        android:cacheColorHint="@android:color/transparent"
        android:id="@+id/listViewApps"
        android:layout_marginLeft="0dp"
        android:paddingLeft="0dp" />


</LinearLayout>
